<resources>
    <string name="app_name">ColorGuessingGame</string>
    <string name="title">Color Estimating Game</string>
    <string name="begin">Begin!</string>
    <string name="results">Current Results</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="return_to_home">Go Back</string>
    <string name="game_title">Enter your guess</string>
    <string name="submit">Submit</string>
    <string name="red">R</string>
    <string name="green">G</string>
    <string name="blue">B</string>
    <string name="next">Next Color</string>
    <string name="no_average">You do not have any results yet.
 Try guessing a color!</string>
</resources>
