<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textViewRealBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewArrowBlue"
        app:layout_constraintStart_toEndOf="@+id/imageViewArrowBlue"
        app:layout_constraintTop_toTopOf="@+id/imageViewArrowBlue" />

    <TextView
        android:id="@+id/textViewRealGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewArrowGreen"
        app:layout_constraintStart_toEndOf="@+id/imageViewArrowGreen"
        app:layout_constraintTop_toTopOf="@+id/imageViewArrowGreen" />

    <ImageView
        android:id="@+id/imageViewArrowBlue"
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextBlue"
        app:layout_constraintStart_toEndOf="@+id/editTextBlue"
        app:layout_constraintTop_toTopOf="@+id/editTextBlue"
        app:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/imageViewArrowGreen"
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextGreen"
        app:layout_constraintStart_toEndOf="@+id/editTextGreen"
        app:layout_constraintTop_toTopOf="@+id/editTextGreen"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/textViewBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:text="@string/blue"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextBlue"
        app:layout_constraintEnd_toStartOf="@+id/editTextBlue"
        app:layout_constraintTop_toTopOf="@+id/editTextBlue" />

    <TextView
        android:id="@+id/textViewGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:text="@string/green"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextGreen"
        app:layout_constraintEnd_toStartOf="@+id/editTextGreen"
        app:layout_constraintTop_toTopOf="@+id/editTextGreen" />

    <EditText
        android:id="@+id/editTextRed"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/textfield_background"
        android:ems="10"
        android:hint="0 - 255"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGame" />

    <TextView
        android:id="@+id/textViewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:text="@string/game_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextBlue"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/textfield_background"
        android:ems="10"
        android:hint="0 - 255"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGreen" />

    <EditText
        android:id="@+id/editTextGreen"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/textfield_background"
        android:ems="10"
        android:hint="0 - 255"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRed" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/editTextBlue"
        app:layout_constraintStart_toStartOf="@+id/editTextBlue"
        app:layout_constraintTop_toBottomOf="@+id/editTextBlue" />

    <TextView
        android:id="@+id/textViewRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:text="@string/red"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRed"
        app:layout_constraintEnd_toStartOf="@+id/editTextRed"
        app:layout_constraintTop_toTopOf="@+id/editTextRed" />

    <ImageView
        android:id="@+id/imageViewArrowRed"
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRed"
        app:layout_constraintStart_toEndOf="@+id/editTextRed"
        app:layout_constraintTop_toTopOf="@+id/editTextRed"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/textViewRealRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewArrowRed"
        app:layout_constraintStart_toEndOf="@+id/imageViewArrowRed"
        app:layout_constraintTop_toTopOf="@+id/imageViewArrowRed" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/return_to_home"
        app:layout_constraintEnd_toStartOf="@+id/imageViewFace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFace" />

    <TextView
        android:id="@+id/textViewReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmit"
        app:layout_constraintStart_toStartOf="@+id/buttonSubmit"
        app:layout_constraintTop_toBottomOf="@+id/editTextBlue" />

    <Button
        android:id="@+id/buttonNextColor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewFace"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFace" />

    <TextView
        android:id="@+id/textViewAverageComparison"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewReport"
        app:layout_constraintStart_toStartOf="@+id/textViewReport"
        app:layout_constraintTop_toBottomOf="@+id/textViewReport" />

    <ImageView
        android:id="@+id/imageViewFace"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewAverageComparison"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/textViewAverageComparison"
        app:layout_constraintTop_toBottomOf="@+id/textViewAverageComparison" />
</androidx.constraintlayout.widget.ConstraintLayout>